--- a/projeDetaylari/spotinfo/spotinfoDetay.html
+++ b/projeDetaylari/spotinfo/spotinfoDetay.html
@@ -24,7 +24,7 @@
       Spotify API kullanarak şarkı bilgilerini gerçek zamanlı çeker ve kullanıcıların bu şarkılar hakkında 
       yorum yapmasını, beğenmesini ve sohbet etmesini sağlar. Amaç, hem müzik içerikleriyle etkileşim kurulan 
       bir ortam oluşturmak hem de API kullanımı, arayüz tasarımı ve veri yönetimi gibi konularda pratik yapmaktı.
-      Geliştirme sürecinde hem frontend hem de backend alanlarında aktif rol aldım.
+      Geliştirme sürecinde hem frontend hem de backend alanlarını tek başıma üstlendim.
     </p>
   </section>
 
