--- a/index.html
+++ b/index.html
@@ -1,97 +1,102 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Evren Zehni - Portfolyo</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <div class="container">
     <header>
       <h1>Evren Zehni</h1>
-      <p>Yazılım Geliştirici</p>
+      <p>Full-Stack Developer Adayı</p>
     </header>
 
+    <nav class="nav">
+      <a href="#hakkimda">Hakkımda</a>
+      <a href="#projeler">Projeler</a>
+      <a href="#yetenekler">Yetenekler</a>
+      <a href="#iletisim">İletişim</a>
+    </nav>
+
     <section id="hakkimda">
-        <h2>Hakkımda</h2>
-        <p>Ben Evren, yeni mezun bir yazılım geliştiricisiyim. Mersin Ünversitesi Bilgisayar Programcılığı
-           bölümünden mezun oldum. C# ve .NET Framework ile geliştirme yaparak başladım; 
-           şu anda aktif olarak web teknolojileri (HTML, CSS, JavaScript) öğreniyorum. Proje üretmeyi, araştırmayı ve gerçek ihtiyaçlara çözüm geliştirmeyi seviyorum. 
-           Hedefim, hem frontend hem de backend alanında yetkinlik kazanarak full-stack geliştirici olmak.
-        </p>
+      <h2>Hakkımda</h2>
+      <p>
+        Merhaba! Ben Evren. Mersin Üniversitesi Bilgisayar Programcılığı mezunuyum. C# ve .NET Framework ile başladığım bu serüvende artık web teknolojilerine yöneldim. Gerçek problemlere çözüm üreten, estetik ve işlevsel projeler geliştirmeyi seviyorum. Hedefim, frontend ve backend alanlarında tam yetkinlik kazanarak başarılı bir full-stack geliştirici olmak.
+      </p>
     </section>
 
     <section id="projeler">
-      <h2>Projelerim</h2>
-
-      <div class="kartlar">
-
-        <div class="kart">
-          <div class="kart-ic">
-            <div class="kart-on">
-              <div class="ikon">🎵</div>
-              <h3>Sosyal Medya Prototipi</h3>
+      <h2>Projeler</h2>
+      <div class="card-wrapper">
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <h3>🎵 Spotinfo</h3>
+              <p>Sosyal medya prototipi</p>
             </div>
-            <div class="kart-arka">
-              <p>Spotify API ile çalışan, kullanıcıların müzik zevklerini paylaşabildiği basit bir sosyal medya prototipi.</p>              
-              <br>
-              <p><strong>Teknolojiler:</strong> C#, .NET Framework, Spotify API</p>
-              <br>
-              <p><a id="proje-detayi" href="/Portfolio/projeDetaylari/spotinfo/spotinfoDetay.html">Proje Detaylarında Git</a></p>
+            <div class="card-back">
+              <p>Spotify API ile entegre çalışan, müzik zevklerini paylaşabildiğiniz sosyal medya prototipi.</p>
+              <small>Teknolojiler: C#, .NET, Spotify API</small><br><br>
+              <a href="/Portfolio/projeDetaylari/spotinfo/spotinfoDetay.html">Detaya Git</a>
             </div>
           </div>
         </div>
 
-        <div class="kart">
-          <div class="kart-ic">
-            <div class="kart-on">
-              <div class="ikon">🐾</div>
-              <h3>Veteriner Takip Sistemi</h3>
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <h3>🐾 VetHub</h3>
+              <p>Veteriner Masaüstü</p>
             </div>
-            <div class="kart-arka">
-              <p>Veterinerlerin hasta ve tedavi bilgilerini yönetebileceği masaüstü uygulaması.</p>
-              <br>
-              <p><strong>Teknolojiler:</strong> C#, MSSQL, WinForms</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="kart">
-          <div class="kart-ic">
-            <div class="kart-on">
-              <div class="ikon">💡</div>
-              <h3>Veteriner Web Paneli</h3>
-            </div>
-            <div class="kart-arka">
-              <p>Masaüstü yazılımın web versiyonu, satış ve rezervasyon işlemleri için planlandı.</p>
-              <br>
-              <p><strong>Teknolojiler:</strong> HTML, CSS, JS, ASP.NET</p>
+            <div class="card-back">
+              <p>Veterinerlerin hasta ve tedavi süreçlerini yönetebildiği kapsamlı masaüstü uygulaması.</p>
+              <small>Teknolojiler: C#, MSSQL, WinForms</small><br><br>
+              <a href="/projeDetaylari/vet/vetHubDetay.html">Detaya Git</a>
             </div>
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-inner">
+            <div class="card-front">
+              <h3>💡 Web Panel</h3>
+              <p>Veteriner Paneli (Web)</p>
+            </div>
+            <div class="card-back">
+              <p>Masaüstü yazılımın web versiyonu. Randevu ve yönetim işlemleri için hazırlandı.</p>
+              <small>Teknolojiler: HTML, CSS, JS, ASP.NET</small>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
-
     <section id="yetenekler">
-        <h2>Yetenekler</h2>
-        <ul>
-            <li><strong>Diller:</strong> C#, SQL, JavaScript (öğrenme aşamasında), HTML, CSS</li>
-            <li><strong>Framework/Platform:</strong> .NET Framework, MSSQL</li>
-            <li><strong>Araçlar:</strong> Visual Studio, Git, GitHub</li>
-        </ul>
+      <h2>Yetenekler</h2>
+      <ul>
+        <li><strong>Diller:</strong> C#, SQL, HTML, CSS, JavaScript</li>
+        <li><strong>Frameworkler:</strong> .NET Framework, ASP.NET</li>
+        <li><strong>Araçlar:</strong> Visual Studio, Git, GitHub</li>
+      </ul>
     </section>
 
     <section id="iletisim">
-        <h2>İletişim</h2>
-        <p>Email: evrenzhn04@gmail.com</p>
-        <p><a href="https://github.com/evrnzhn04" target="_blank">GitHub</a></p>
-        <p><a href="https://www.linkedin.com/in/evren-zehni-194055313/" target="_blank">LinkedIn</a></p>
+      <h2>İletişim</h2>
+      <p><strong>E-posta:</strong> evrenzhn04@gmail.com</p>
+      <p><a href="https://github.com/evrnzhn04" target="_blank">GitHub</a> | <a href="https://www.linkedin.com/in/evren-zehni-194055313/" target="_blank">LinkedIn</a></p>
     </section>
 
+    <footer>
+      <p>&copy; 2025 Evren Zehni. Tüm Hakları Saklıdır.</p>
+    </footer>
 
+    <script>
+      window.addEventListener("scroll", () => {
+        document.querySelector("header").style.opacity = 1 - window.scrollY / 300;
+      });
+    </script>
+  </div>
 </body>
 </html>
