--- a/projeDetaylari/spotinfo/spotinfoDetay.html
+++ b/projeDetaylari/spotinfo/spotinfoDetay.html
@@ -29,9 +29,10 @@
   </section>
 
   <div id="anaMenu">
-    <h3>🖥️ Ana Menü</h3>
+    <h3>🖥️ Arayüzden Görüntüler</h3>
     <div id="anaMenuResim">
-      <img src="/Portfolio/projeDetaylari/spotinfo/spotinfoResimler/AnaMenu.png" alt="Ana Menu" width="915" />
+      <img src="/projeDetaylari/spotinfo/spotinfoResimler/AnaMenu.png" alt="Ana Menu" width="915" />
+      <img src="/projeDetaylari/spotinfo/spotinfoResimler/sifreDegistir.png" alt="Ana Menu" width="915" />
     </div>
   </div>
 
