--- a/projeDetaylari/spotinfo/spotinfoDetay.html
+++ b/projeDetaylari/spotinfo/spotinfoDetay.html
@@ -32,7 +32,7 @@
     <h3>🖥️ Arayüzden Görüntüler</h3>
     <div id="anaMenuResim">
       <img src="/Portfolio/projeDetaylari/spotinfo/spotinfoResimler/AnaMenu.png" alt="Ana Menu" width="915" />
-      <img src="/Portfolio/projeDetaylari/spotinfo/spotinfoResimler/sifreDegistir.png" alt="Ana Menu" width="915" />
+      <img src="/Portfolio/projeDetaylari/spotinfo/spotinfoResimler/sifreDegistir.png" alt="Şifre Değiştirme Ekranı" width="915" />
     </div>
   </div>
 
